# datawrapper-mcp-server

./: .env.template  .gitignore  README.md  justfile  pyproject.toml  server.py
src/datawrapper_mcp_server/: server.py
tests/: test_server.py
