[project]
name = "datawrapper"
version = "0.1.0"
description = "A model context protocol server for interacting with the Datawrapper API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp[cli]>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-httpx>=0.35.0",
]
